--- a/templates/default/appshot.cfg.erb
+++ b/templates/default/appshot.cfg.erb
@@ -8,8 +8,8 @@ appshot "<%= @appshot_name %>" do
   <% if @filesystem_mountpoint %>
   xfs mount_point: "<%= @filesystem_mountpoint %>"
   <% end %>
-  ebs_snapshot volume_id: "<%= @volume_id %>", aws_access_key_id: "<%= @aws_access_key_id %>", aws_secret_access_key: "<%= @aws_secret_access_key %>"
+  ebs_snapshot volume_id: "<%= node['appshot']['storage_volume_id'] %>", aws_access_key_id: "<%= @aws_access_key_id %>", aws_secret_access_key: "<%= @aws_secret_access_key %>"
   <% if @snapshots_to_keep %>
-  ebs_prune volume_id: "<%= @volume_id %>", snapshots_to_keep: <%= @snapshots_to_keep %>, minimum_retention_days: <%= @minimum_retention_days %>, aws_access_key_id: "<%= @aws_access_key_id %>", aws_secret_access_key: "<%= @aws_secret_access_key %>"
+  ebs_prune volume_id: "<%= node['appshot']['storage_volume_id'] %>", snapshots_to_keep: <%= @snapshots_to_keep %>, minimum_retention_days: <%= @minimum_retention_days %>, aws_access_key_id: "<%= @aws_access_key_id %>", aws_secret_access_key: "<%= @aws_secret_access_key %>"
   <% end %>
 end
